timeout tests added