@@ -53,10 +53,28 @@
 			<version>4.2.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.junit-pioneer</groupId>
+			<artifactId>junit-pioneer</artifactId>
+			<version>2.2.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+			<!-- https://junit-pioneer.org/docs/environment-variables/#warnings-for-reflective-access -->
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+		        <version>2.12.4</version>
+			    <configuration>
+			        <argLine>
+			            --add-opens java.base/java.util=ALL-UNNAMED
+			            --add-opens java.base/java.lang=ALL-UNNAMED
+			        </argLine>
+			    </configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.graalvm.nativeimage</groupId>
 				<artifactId>native-image-maven-plugin</artifactId>
@@ -68,7 +86,8 @@
 						</goals>
 						<phase>package</phase>
 						<configuration>
-							<mainClass>com.github.pfichtner.jsipdialer.SipClientMain</mainClass>
+							<mainClass>
+								com.github.pfichtner.jsipdialer.SipClientMain</mainClass>
 							<imageName>jsipdialer</imageName>
 							<buildArgs>
 								<buildArg>--static</buildArg>
